--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <h1>Joseph Lozano Portfolio</h1>
         <h2>I'm a aspiring Web Developer  </h2>
         <hr>
-        <h3><a href=.public/movie-ranking>Movie Ranking Project</a></h3>
+        <h3><a href=.public/movie-ranking.html>Movie Ranking Project</a></h3>
         <img src="./assets/images/Screenshot 2023-08-07 at 9.32.05 AM 1.png"
         width="300"
         height="300"/>
